# flowerchat

./: .gitignore  Cargo.toml  README.md
flowerchat-protocol/: Cargo.toml  README.md
flowerchat-protocol/src/: lib.rs  role.rs  share_link.rs
flowerchat-protocol/src/events/: mod.rs
flowerchat-protocol/src/events/rooms/: create_public.rs  mod.rs  public_message.rs
flowerchat-protocol/src/types/: mod.rs  room_message.rs  room_name.rs
flowerchat-tui/: Cargo.toml
flowerchat-tui/src/: client.rs  consts.rs  identities.rs  main.rs  tui.rs  utils.rs  validator.rs
flowerchat-tui/src/database/: mint.rs  mod.rs  public_message.rs  public_room.rs  room.rs  shard.rs  space.rs  user.rs
flowerchat-tui/src/tui/: app.rs  mod.rs  terminal_widget.rs
flowerchat-tui/src/tui/commands/: connect_space.rs  mod.rs  print_help.rs  print_spaces.rs  room_create.rs  room_list.rs
src/: consts.rs  emojis.rs  events.rs  identities.rs  main.rs  utils.rs
src/database/: chat.rs  message.rs  mint.rs  mod.rs  shard.rs  space.rs  user.rs
src/tui/: create_identity.rs  login.rs  mod.rs
