[package]
name = "flowerchat"
version = "0.1.0"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
license = "GPL-3.0-only"
edition = "2024"
publish = false

[profile.release]
opt-level = 3
lto = true
strip = true

[dependencies.libflowerpot]
git = "https://github.com/krypt0nn/libflowerpot"

[dependencies.tokio]
version = "1.47"
features = ["io-std", "macros", "rt-multi-thread"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bson = "3.0"
regex = "1.11"
lazy_static = "1.5"
spin = "0.10"
futures = "0.3"
time = "0.3"
rand_chacha = "0.3"
blake3 = "1.8"
crc32fast = "1.5"
